--- a/app/globals.css
+++ b/app/globals.css
@@ -4,47 +4,47 @@
 
 @layer base {
   :root {
-    --background: 0 0% 93%;
-    --foreground: 0 0% 0%;
+    --background: 0 0% 98%;
+    --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
-    --card-foreground: 0 0% 0%;
+    --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 0%;
+    --popover-foreground: 222.2 84% 4.9%;
     --primary: 184 24% 57%;
-    --primary-foreground: 0 0% 100%;
-    --secondary: 0 0% 96%;
-    --secondary-foreground: 0 0% 0%;
-    --muted: 0 0% 96%;
-    --muted-foreground: 0 0% 0%;
+    --primary-foreground: 210 40% 98%;
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
     --accent: 184 24% 57%;
-    --accent-foreground: 0 0% 0%;
+    --accent-foreground: 222.2 47.4% 11.2%;
     --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89%;
-    --input: 0 0% 89%;
+    --destructive-foreground: 210 40% 98%;
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
     --ring: 184 24% 57%;
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 216 15% 16%;
-    --foreground: 0 0% 93%;
-    --card: 214 11% 22%;
-    --card-foreground: 0 0% 93%;
-    --popover: 214 11% 22%;
-    --popover-foreground: 0 0% 93%;
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+    --card: 222.2 84% 9.8%;
+    --card-foreground: 210 40% 98%;
+    --popover: 222.2 84% 9.8%;
+    --popover-foreground: 210 40% 98%;
     --primary: 184 24% 57%;
-    --primary-foreground: 216 15% 16%;
-    --secondary: 214 11% 22%;
-    --secondary-foreground: 0 0% 93%;
-    --muted: 214 11% 22%;
-    --muted-foreground: 184 24% 57%;
+    --primary-foreground: 222.2 84% 4.9%;
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
     --accent: 184 24% 57%;
-    --accent-foreground: 216 15% 16%;
+    --accent-foreground: 210 40% 98%;
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 93%;
-    --border: 214 11% 22%;
-    --input: 214 11% 22%;
+    --destructive-foreground: 210 40% 98%;
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
     --ring: 184 24% 57%;
   }
 
@@ -68,16 +68,14 @@
   }
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.scrollbar-none::-webkit-scrollbar {
-  display: none;
+.scrollbar-none {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  overflow-y: auto;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-.scrollbar-none {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-  overflow-y: auto;
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
 }
 
 /* Add glass effect for dark mode */
